--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
+  firebase_storage: ^12.4.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
